--- a/arch/arm/configs/sya_defconfig
+++ b/arch/arm/configs/sya_defconfig
@@ -1,4 +1,9 @@
 CONFIG_LOCALVERSION="-licheepi-zero"
+CONFIG_HAVE_KERNEL_GZIP=y
+CONFIG_HAVE_KERNEL_LZMA=n
+CONFIG_HAVE_KERNEL_XZ=n
+CONFIG_HAVE_KERNEL_LZO=n
+CONFIG_HAVE_KERNEL_LZ4=n
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -156,3 +161,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_FTRACE is not set
 CONFIG_CRYPTO_DEV_SUN4I_SS=y
+CONFIG_MTD_CMDLINE_PARTS=y
+CONFIG_MTD_BLOCK2MTD=y
+CONFIG_MTD_BLOCK=y
+CONFIG_JFFS2_FS=y
