1.禁用emmc1  2.启用PWM调节背光  3.U盘自动识别,配合mdev实现自动挂载卸载  4.根文件系统使用buildroot+Sourcery CodeBench Lite 2014.05-29生成

--- a/arch/arm/boot/dts/sun8i-v3s-licheepi-zero-dock.dts
+++ b/arch/arm/boot/dts/sun8i-v3s-licheepi-zero-dock.dts
@@ -72,12 +72,14 @@
 	status = "okay";
 };
 
+#if 0
 &mmc1 {
 	broken-cd;
 	bus-width = <4>;
 	vmmc-supply = <&reg_vcc3v3>;
 	status = "okay";
 };
+#endif
 
 &lradc {
 	vref-supply = <&reg_vcc3v0>;
