--- a/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
+++ b/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
@@ -97,6 +97,11 @@
 		compatible = "nsiway,ns2009";
 		reg = <0x48>;
 	};
+
+    rtc@51 {
+        compatible = "nxp,pcf8563";
+        reg = <0x51>;
+    };
 };
 
 &ohci0 {
