--- a/arch/arm/boot/dts/sun8i-v3s.dtsi
+++ b/arch/arm/boot/dts/sun8i-v3s.dtsi
@@ -330,12 +330,14 @@
 			#reset-cells = <1>;
 		};
 
+#if 0
 		rtc: rtc@01c20400 {
 			compatible = "allwinner,sun6i-a31-rtc";
 			reg = <0x01c20400 0x54>;
 			interrupts = <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>,
 				     <GIC_SPI 41 IRQ_TYPE_LEVEL_HIGH>;
 		};
+#endif
 
 		pio: pinctrl@01c20800 {
 			compatible = "allwinner,sun8i-v3s-pinctrl";
