--- a/arch/arm/configs/sya_defconfig
+++ b/arch/arm/configs/sya_defconfig
@@ -9,7 +9,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_CGROUPS=y
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="/opt/nuc970bsp/rootfs_groups/rootfs_buildroot"
+CONFIG_INITRAMFS_SOURCE="/opt/nuc970bsp/rootfs_groups/rootfs_buildroot_lite"
 CONFIG_PERF_EVENTS=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
@@ -135,6 +135,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_INTF_SYSFS is not set
 # CONFIG_RTC_INTF_PROC is not set
+CONFIG_RTC_DRV_PCF8563=y
 CONFIG_DMADEVICES=y
 CONFIG_DMA_SUN6I=y
 CONFIG_STAGING=y
